--- a/public/documentation.html
+++ b/public/documentation.html
@@ -24,18 +24,21 @@
         <th>Request</th>
         <th>URL</th>
         <th>HTTP Method</th>
+        <th>Request body data format</th>
         <th>Response</th>
       </tr>
       <tr>
         <td>Get a list of ALL movies</td>
         <td>/movies</td>
         <td>GET</td>
+        <td>None</td>
         <td>A JSON object holding data about all the movies</td>
       </tr>
       <tr>
         <td>Get data about a single movie by title</td>
         <td>/movies/[title]</td>
         <td>GET</td>
+        <td>None</td>
         <td>
           A JSON object holding data about a single movie, title, description,
           genre, director, image URL, whether it’s featured or not. Example: {
@@ -49,12 +52,14 @@
         <td>Get data about genre by title</td>
         <td>/movies/[title]/[genre]</td>
         <td>GET</td>
+        <td>None</td>
         <td>A text message indicating the chosen genre's details</td>
       </tr>
       <tr>
         <td>Get data about the director by name</td>
         <td>/directorNames</td>
         <td>GET</td>
+        <td>None</td>
         <td>
           A JSON object holding data about a director (bio, birth year, death
           year) by name . Example: { name : "Michael Hoffman", date of birth :
@@ -68,6 +73,10 @@
         <td>/users</td>
         <td>POST</td>
         <td>
+          A JSON object holding data about the new user, structured like: { name
+          : "Paulina Gomez", email : "paulina@yahoo.com", date of birth: 1997 }
+        </td>
+        <td>
           A JSON object holding data about the user that was added: { name :
           "Paulina Gomez", email : "paulina@yahoo.com", date of birth: 1997 }
         </td>
@@ -76,12 +85,14 @@
         <td>Update a user information (username)</td>
         <td>/users</td>
         <td>PUT</td>
+        <td>None</td>
         <td>A text message indicating the username was successfully updated</td>
       </tr>
       <tr>
         <td>Add a movie to a favorites list</td>
         <td>/users/[favorite]</td>
         <td>PUT</td>
+        <td>None</td>
         <td>
           A text message indicating the movie has been added to favorites list
         </td>
@@ -90,6 +101,7 @@
         <td>Remove a movie from the favorites list</td>
         <td>/users/[favorite]</td>
         <td>DELETE</td>
+        <td>None</td>
         <td>
           A text message indicating the movie has been removed from favorites
           list
@@ -99,6 +111,7 @@
         <td>Remove users account</td>
         <td>/users</td>
         <td>DELETE</td>
+        <td>None</td>
         <td>
           A text message indicating weather the accpunt has been successfully
           removed
